--- a/BookApp/Views/_ViewImports.cshtml
+++ b/BookApp/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using BookApp
 @using BookApp.Dto.Models
-@using BookApp.Dal.Entities
+@using BookApp.Dto.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
